# dynamoplus

./: .coveragerc  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  deploy.Dockerfile  deploy_aws.sh  docker-compose-deploy.yml  docker-compose-localhost-dynamo-only.yml  docker-compose-localhost.yml  docker-compose-serverless.yml  wait-for.sh
aws_serverless/: deploy_aws.sh  pyproject.toml  samconfig.toml  template.yml
aws_serverless/serverless/: admin.py  info.py
core/: README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
core/aws/dynamodb/: dynamodb_repository.py  dynamodbdao.py
core/dynamoplus/: dynamo_plus_v2.py
core/dynamoplus/models/query/: conditions.py  index.py
core/dynamoplus/service/: indexing_decorator.py  validation_service.py
core/dynamoplus/service/security/: security.py
core/dynamoplus/v2/: indexing_service_v2.py
core/dynamoplus/v2/repository/: domain_repository.py  repositories_v2.py  system_repositories.py
core/dynamoplus/v2/service/: common.py  query_service_v2.py
core/dynamoplus/v2/service/domain/: domain_service_v2.py
core/dynamoplus/v2/service/system/: aggregation_service.py  aggregation_service_v2.py  system_service_v2.py
core/tests/dynamoplus/service/: test_dynamoplus_integration_test.py  test_validation_service.py
core/tests/dynamoplus/service/authorization/: test_authorization.py
core/tests/dynamoplus/utils/: test_decimalEncoder.py  test_utils.py
dashboard/: .firebaserc  .gitignore  binaryMimeTypes.js  index.js  next.config.js  package.json  server.js  serverless.yml
doc/: aggregations.md  dynamoplus.md  sequence.puml
github_actions_scripts/: create-tables.sh  run-localhost.sh
http_flask/: README.md  app.py  pyproject.toml  requirements.txt  setup.py
http_flask/http/: app.py  lambda_handler.py
scripts/: create-tables.sh  entrypoint.sh  init.sh  random_string.py  run-localhost.sh  setup.sh
serverless/: .travis.yml  Dockerfile  REFACTORING.md  TODO  docker-compose.yml  package.json  public_key_example  requirements.txt  (+3 more)
(+167 files in other folders)
