[tool.poetry]
name = "dynamoplus-core"
version = "0.5.6"
description = "Core library for dynamoplus"
authors = ["antessio <<antessio7@gmail.com>>"]
readme = "README.md"
packages = [{include = "dynamoplus"}, {include = "aws"}]


[tool.poetry.dependencies]
python = "^3.9"
fastjsonschema = ">=2.15.0,<2.16.0"
boto3 = ">=1.17.8,<1.18.0"
parameterized = ">=0.8.1,<0.9.0"
setuptools = ">=60.2.0,<60.3.0"
jmespath = ">=0.10.0,<0.11.0"
cryptography = "37.0.4"
pip = ">=21.3.1,<21.4.0"
attrs = ">=22.1.0,<22.2.0"
toml = ">=0.10.2,<0.11.0"
wheel = ">=0.37.1,<0.38.0"
jinja2 = "3.1.2"
rsa = ">=4.8,<5.0"
pyasn1 = ">=0.4.8,<0.5.0"
botocore = ">=1.20.8,<1.21.0"
s3transfer = ">=0.3.4,<0.4.0"
six = ">=1.15.0,<1.16.0"
python-dateutil = ">=2.8.1,<2.9.0"
urllib3 = ">=1.26.5,<1.27.0"
certifi = ">=2020.12.5,<2020.13.0"
pyjwt = ">=2.4.0,<2.5.0"
apispec = ">=4.3.0,<4.4.0"


[tool.poetry.group.test.dependencies]
moto = "^4.2.6"
mock = ">=4.0.2,<4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
